--- a/source/mjml/global/style.mjml
+++ b/source/mjml/global/style.mjml
@@ -32,10 +32,61 @@
 
 @media screen and (max-width: 479px) {
 
+  .views-best-disc__img-prev img{
+    width: 300px !important;
+    max-width: 300px !important;
+  }
+
+  .views-tile__img img {
+    width: 300px !important;
+    max-width: 300px !important;
+
+  }
+
+  .views-best-disc__column-prev-img {
+    width: 300px !important;
+    max-width: 300px !important;
+  }
+
+  .views-best-disc__column {
+    width: 300px !important;
+    max-width: 300px !important;
+  }
+
+  .views-footer__column-social {
+    width: 154px !important;
+    max-width: 154px !important;
+  }
+
+  .views-category__column-btns {
+    width: 280px !important;
+    max-width: 280px !important;
+  }
 
 }
 
 @media screen and (min-width: 480px) {
+
+  /* .views-best-disc__img-prev img{
+    width: 220px !important;
+    max-width: 220px !important;
+  } */
+
+  .views-tile__img img {
+    width: 300px !important;
+    max-width: 300px !important;
+
+  }
+
+  /* .views-best-disc__column-prev-img {
+    width: 220px !important;
+    max-width: 220px !important;
+  } */
+
+  .views-best-disc__column {
+    width: 300px !important;
+    max-width: 300px !important;
+  }
 
 }
 
